# i3-launcher

./: .pdm-python  README.md  i3-launcher  i3launchconfig.py  main.py  pyproject.toml  requirements.txt
i3launcher/: config.py  i3.py  injector.py  watcher.py
