[project]
name = "i3-launcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jtyers", email = "40065647+jtyers@users.noreply.github.com"},
]
dependencies = [
    "click",
    "i3ipc",
    "pyyaml",
    "inject>=5.3.0",
    "attrs>=25.3.0",
    "cattrs>=25.1.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
